--- a/search/index.html
+++ b/search/index.html
@@ -141,6 +141,15 @@ if (!doNotTrack) {
             <li id="list-heading"><a href="/posts" data-filter="all">Posts</a></li>
             <div class="subtree">
                 
+  
+  
+  
+  
+  
+    
+    <li><a class="" href="/posts/owasp-juice-shop-walkthrough/" title="OWASP Juice Shop Walkthrough">OWASP Juice Shop Walkthrough</a></li>
+  
+
 
             </div>
           </ul>
