--- a/search/index.html
+++ b/search/index.html
@@ -148,6 +148,15 @@ if (!doNotTrack) {
   
   
     
+    <li><a class="" href="/posts/blogsmoved/" title="Blog Posts Moved">Blog Posts Moved</a></li>
+  
+
+  
+  
+  
+  
+  
+    
     <li><a class="" href="/posts/website-guide/" title="Build your own Hugo website">Build your own Hugo website</a></li>
   
 
@@ -377,7 +386,7 @@ if (!doNotTrack) {
             Toha
           </a>
         </div>
-        <div class="col-md-4 text-center">© 2021 Copyright.</div>
+        <div class="col-md-4 text-center">© 2022 Copyright.</div>
         <div class="col-md-4 text-right">
           <a id="hugo" href="https://gohugo.io/" target="_blank" rel="noopener">Powered by
           <img
